# agent-mail

./: .gitignore  README.md  pyproject.toml
mailbox/bob/inbox/: msg_1779242009940_U2UxlxGG.json
skills/agent-mail-pickup/: SKILL.md
src/agent_mail/: __init__.py  cli.py  core.py
src/agent_mail/providers/: __init__.py  files.py  local.py
tests/: test_files_provider.py  test_scaffold.py  test_v01.py
