[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mail"
version = "0.1.0"
authors = [
  { name = "Xinsong Li", email = "lixinso@gmail.com" },
]
description = "Identity-aware async message bus for AI agents."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
s3 = [
    "boto3>=1.34.0",
]
dev = [
    "pytest>=7.0",
    "moto[s3]>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/AgentOrganization/agent-mail"
"Bug Tracker" = "https://github.com/AgentOrganization/agent-mail/issues"
"Sibling project" = "https://github.com/lixinso/agent-drive"

[project.scripts]
agent-mail = "agent_mail.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
